<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_bg_f1gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30px"
        android:layout_marginTop="60px"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/a_ts_34"
        android:textStyle="bold"
        tools:text="18888888888"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_answer_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40px"
            android:background="@color/colorPrimary"
            android:text="@string/a_answer_call"
            android:textColor="@color/c_bg_white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_end_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40px"
            android:background="@color/c_base_red"
            android:text="@string/a_end_call"
            android:textColor="@color/c_bg_white"/>

        <Button
            android:id="@+id/btn_hf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/c_bg_99gray"
            android:text="@string/a_hf"
            android:textColor="@color/c_bg_white"/>

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_marginTop="60px"
        android:background="@color/c_bg_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_switch_location"
            android:layout_width="90px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16px"
            android:text="@string/a_switch"
            android:textColor="@color/c_text_99gray"
            android:textSize="@dimen/a_ts_34"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_start_hint"
                android:layout_width="wrap_content"
                android:layout_height="100px"
                android:gravity="center_vertical"
                android:text="@string/a_start_location"
                android:textColor="@color/c_text_22black"
                android:textSize="@dimen/a_ts_34"/>

            <TextView
                android:id="@+id/tv_start_location"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_toRightOf="@+id/tv_start_hint"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/a_start_location_hint"
                android:lines="1"
                android:textColor="@color/c_text_22black"/>

            <View
                android:id="@+id/line"
                style="@style/c_line_horizontal"
                android:layout_below="@+id/tv_start_hint"/>

            <TextView
                android:id="@+id/tv_end_hint"
                android:layout_width="wrap_content"
                android:layout_height="100px"
                android:layout_below="@id/line"
                android:gravity="center_vertical"
                android:text="@string/a_end_location"
                android:textColor="@color/c_text_22black"
                android:textSize="@dimen/a_ts_34"/>

            <TextView
                android:id="@+id/tv_end_location"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_below="@id/line"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_toRightOf="@+id/tv_end_hint"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/a_end_location_hint"
                android:lines="1"
                android:textColor="@color/c_text_22black"/>
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_marginTop="30px"
        android:background="@color/c_bg_white"
        android:orientation="vertical"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:id="@+id/tv_time_hint"
            android:layout_width="160px"
            android:layout_height="100px"
            android:gravity="center_vertical"
            android:text="@string/a_start_time"
            android:textColor="@color/c_text_22black"
            android:textSize="@dimen/a_ts_34"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:layout_marginLeft="30px"
            android:layout_toRightOf="@+id/tv_time_hint"
            android:height="100px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="@color/c_text_22black"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_toRightOf="@+id/tv_date"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="@color/c_text_22black"/>

        <View
            android:id="@+id/line2"
            style="@style/c_line_horizontal"
            android:layout_below="@+id/tv_time_hint"/>

        <TextView
            android:id="@+id/tv_number_hint"
            android:layout_width="160px"
            android:layout_height="100px"
            android:layout_below="@id/line2"
            android:gravity="center_vertical"
            android:text="@string/a_number"
            android:textColor="@color/c_text_22black"
            android:textSize="@dimen/a_ts_34"/>

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_below="@id/line2"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_toRightOf="@+id/tv_number_hint"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="@color/c_text_22black"/>
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>